[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffmat"
version = "0.1.0"
description = "Prepare composite voxels for FFT simulations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }

authors = [
    { name = "Yang Chen" }
]

keywords = [
    "materials-modelling",
    "computational-mechanics",
    "fft",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/yang-chen-2022/fft-compositevoxel"
Repository = "https://github.com/yang-chen-2022/fft-compositevoxel"
Issues = "https://github.com/yang-chen-2022/fft-compositevoxel/issues"